--- a/_data/papers/2019.yml
+++ b/_data/papers/2019.yml
@@ -16,7 +16,7 @@
   year: 2019
   img: ila-min.png
   title: "Improving Latent Alignment in Text Summarization by Generalizing the Pointer Generator"
-  authors: "Xiaoyu Shen, Yang Zhao, <u>Hui Su<u>, Dietrich Klakow"
+  authors: "Xiaoyu Shen, Yang Zhao, <u>Hui Su</u>, Dietrich Klakow"
   doc-url:
   conf: emnlp19.png
   url: "https://www.aclweb.org/anthology/D19-1390.pdf"
@@ -28,7 +28,7 @@
   year: 2019
   img: asq-min.png
   title: "Answer-Supervised Question Reformulation for Enhancing Conversational Machine Comprehension"
-  authors: "Qian Li, <u>Hui Su<u>, CHENG NIU, Daling Wang, Zekang Li, Shi Feng"
+  authors: "Qian Li, <u>Hui Su</u>, CHENG NIU, Daling Wang, Zekang Li, Shi Feng"
   doc-url:
   conf: emnlp19.png
   url: "https://www.aclweb.org/anthology/D19-5805.pdf"
@@ -40,7 +40,7 @@
   year: 2019
   img: saa-min.png
   title: "Select and Attend: Towards Controllable Content Selection in Text Generation"
-  authors: "Xiaoyu Shen, Jun Suzuki, Kentaro Inui, <u>Hui Su<u>, Dietrich Klakow, Satoshi Sekine"
+  authors: "Xiaoyu Shen, Jun Suzuki, Kentaro Inui, <u>Hui Su</u>, Dietrich Klakow, Satoshi Sekine"
   doc-url:
   conf: emnlp19.png
   url: "https://arxiv.org/pdf/1909.04453"
